加入期中考查驗項目

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -393,6 +393,8 @@ var winkVideoData = {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div><h3>w7_summary</h3>
+<p><a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/07fc8d08e6738f91f7f8042ff48385b4e10436bf/w7_a_summary.py">2a w7 summary 查驗</a> (<a href="/downloads/w7_project/w7_a_summary.txt">2a 有網誌者</a>)</p>
+<p><a href="https://mde.tw/cd2022_guide/content/Brython?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/faffe2bd308016216ce19de21c38a6e33ea33a1f/w7_b_summary.py">2b w7 summary 查驗</a> (<a href="/downloads/w7_project/w7_b_summary.txt">2b 有網誌者</a>)</p>
 <p>請各大組在分組 blog 區域加入一個 Slug: w7_summary 的工作摘要說明, 將本週課堂上每位組員的工作內容與進度列在網誌中, 並以連結導引至各組員的個人網站中.</p>
 <h4>請各大組在摘要網誌中回答下列問題:</h4>
 <ol>
@@ -426,7 +428,7 @@ c.recursiveImport(
     theTypes =  ['.py']
 )</pre>
 <h4>Reference:</h4>
-<p style="padding-left: 30px;"><a href="https://leoeditor.com/tutorial.html">https://leoeditor.com/tutorial.html</a> </p>
+<p style="padding-left: 30px;"><a href="https://leoeditor.com/tutorial.html">https://leoeditor.com/tutorial.html</a></p>
 <p></p><h2>w8 任務</h2>
 <p>任務一: 請依照下列步驟編譯 simExtMtb plugin 專案:</p>
 <p><a href="/downloads/w7_project.7z">w7_project.7z</a></p>
@@ -438,7 +440,17 @@ c.recursiveImport(
 <li>E:\downloads\cop410\programming\simExtMTB&gt;mingw32-make -f Makefile.Release</li>
 <li>在 release 目錄中取得 simExtMtb.dll, 啟動前放入 Coppeliasim 根目錄.</li>
 </ol>
-<p>任務二: 請各組依照下列零件檔案, 將組員分為三組, 分別以 Solvespace, NX (12, 1980 或 2008) 及 Onshape, 完成各零件工程圖與組合圖後, 將 uarm 組合件轉為 STL 格式後轉入 CoppeliaSim, 並安排以 GUI Slider 方式控制前三軸作動. 各組員需將零組件繪製過程與 CoppeliaSim 操控流程及心得, 寫為 Pelican Blog 與 Reveal.js 簡報, 並在期中考週將個人與分組網誌與簡報流程透過 Wink 製作為 mp4 影片嵌入個人與分組網頁, 流程中的 cmsimde 頁面命名為 H1 midterm, 而網誌命名為 midterm.html, 簡報則採 index.html 命名.</p>
+<p>任務二: 請各組依照下列零件檔案, 將組員分為三組, 分別以 Solvespace, NX (12, 1980 或 2008) 及 Onshape, 完成各零件<span style="background-color: #ffff99;">工程圖</span>與<span style="background-color: #ffff99;">組合圖</span>後, 將 uarm 組合件轉為 <span style="background-color: #ffff99;">STL 格式後轉入 CoppeliaSim</span>, 並安排以 GUI Slider 方式<span style="background-color: #ffff99;">控制前三軸作動</span>. 各組員需將零組件繪製過程與 CoppeliaSim 操控流程及心得, 寫為 Pelican Blog 與 Reveal.js 簡報, 並在期中考週將個人與分組網誌與簡報流程透過 Wink 製作為 mp4 影片嵌入個人與分組網頁, 流程中的 cmsimde H1 頁面命名為 <span style="background-color: #ffff99;">midterm</span>, 而網誌命名為 <span style="background-color: #ffff99;">midterm.html</span>, <span style="background-color: #ffff99;">簡報</span>則採 index.html 命名.</p>
+<p>查驗項目:</p>
+<ol>
+<li>uarm 各零件工程圖</li>
+<li>uarm 組合圖</li>
+<li>uarm 組合圖 STL 格式轉入 CoppeliaSim</li>
+<li>GUI 控制前三軸作動</li>
+<li>cms 中第一階頁面, 標題為 midterm</li>
+<li>網誌名稱為 midterm.html</li>
+<li>流程與心得簡報</li>
+</ol>
 <p><a href="https://cad.onshape.com/documents/3c81d3f7fc38f5da16eef9ed/w/f6d4616f188bc9425608890c/e/08936ec436f9e9668efeaefd?renderMode=0&amp;uiState=6254c8ae6d93450dec4bb2b2">Onshape 中的 uArm 組立圖</a></p>
 <p><a href="/downloads/cd2022_uarm_nx12_imported.7z">cd2022_uarm_nx12_imported.7z</a></p>
 <p><img alt="" height="191" src="/images/uarm_nx12.png" width="300"/></p>
