--- a/config/content.htm
+++ b/config/content.htm
@@ -440,7 +440,17 @@ c.recursiveImport(
 <li>E:\downloads\cop410\programming\simExtMTB&gt;mingw32-make -f Makefile.Release</li>
 <li>在 release 目錄中取得 simExtMtb.dll, 啟動前放入 Coppeliasim 根目錄.</li>
 </ol>
-<p>任務二: 請各組依照下列零件檔案, 將組員分為三組, 分別以 Solvespace, NX (12, 1980 或 2008) 及 Onshape, 完成各零件工程圖與組合圖後, 將 uarm 組合件轉為 STL 格式後轉入 CoppeliaSim, 並安排以 GUI Slider 方式控制前三軸作動. 各組員需將零組件繪製過程與 CoppeliaSim 操控流程及心得, 寫為 Pelican Blog 與 Reveal.js 簡報, 並在期中考週將個人與分組網誌與簡報流程透過 Wink 製作為 mp4 影片嵌入個人與分組網頁, 流程中的 cmsimde 頁面命名為 H1 midterm, 而網誌命名為 midterm.html, 簡報則採 index.html 命名.</p>
+<p>任務二: 請各組依照下列零件檔案, 將組員分為三組, 分別以 Solvespace, NX (12, 1980 或 2008) 及 Onshape, 完成各零件<span style="background-color: #ffff99;">工程圖</span>與<span style="background-color: #ffff99;">組合圖</span>後, 將 uarm 組合件轉為 <span style="background-color: #ffff99;">STL 格式後轉入 CoppeliaSim</span>, 並安排以 GUI Slider 方式<span style="background-color: #ffff99;">控制前三軸作動</span>. 各組員需將零組件繪製過程與 CoppeliaSim 操控流程及心得, 寫為 Pelican Blog 與 Reveal.js 簡報, 並在期中考週將個人與分組網誌與簡報流程透過 Wink 製作為 mp4 影片嵌入個人與分組網頁, 流程中的 cmsimde H1 頁面命名為 <span style="background-color: #ffff99;">midterm</span>, 而網誌命名為 <span style="background-color: #ffff99;">midterm.html</span>, <span style="background-color: #ffff99;">簡報</span>則採 index.html 命名.</p>
+<p>查驗項目:</p>
+<ol>
+<li>uarm 各零件工程圖</li>
+<li>uarm 組合圖</li>
+<li>uarm 組合圖 STL 格式轉入 CoppeliaSim</li>
+<li>GUI slider 控制前三軸作動</li>
+<li>cmsimde 中第一階頁面, 標題為 midterm</li>
+<li>網誌名稱為 midterm.html</li>
+<li>流程與心得簡報</li>
+</ol>
 <p><a href="https://cad.onshape.com/documents/3c81d3f7fc38f5da16eef9ed/w/f6d4616f188bc9425608890c/e/08936ec436f9e9668efeaefd?renderMode=0&amp;uiState=6254c8ae6d93450dec4bb2b2">Onshape 中的 uArm 組立圖</a></p>
 <p><a href="/downloads/cd2022_uarm_nx12_imported.7z">cd2022_uarm_nx12_imported.7z</a></p>
 <p><img alt="" height="191" src="/images/uarm_nx12.png" width="300"/></p>
