add ref for nx research

--- a/content/Research.html
+++ b/content/Research.html
@@ -2,7 +2,7 @@
         <head>
         <title>CD_Guide</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,21 +139,19 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">NXOpen << <a href='NXOpen.html'>Previous</a> <a href='NX2008.html'>Next</a> >> NX2008<br /><h1>UGOpen</h1>
-<p>在 NX3 時代, 因為尚未支援採用 Python 編寫 API 延伸程式, 但仍可透過當時的 UGOpen C 編寫為 Python 可呼叫的 pyd 動態連結程式庫, 然後由 Python 程式主導後續的<a href="./../downloads/nx3_c_pyd/nx3_c_pyd_integ.pdf">延伸應用</a>.</p>
-<p><a href="./../downloads/nx3_c_pyd/nx3_for_pyd.c">nx3_for_pyd.c</a></p>
-<p><a href="./../downloads/nx3_c_pyd/nx3_call_pyd.py">nx3_call_pyd.py</a></p>
-<p><a href="./../downloads/nx3_c_pyd/run_nx3_call_pyd.bat">run_nx3_call_pyd.bat</a></p>
-<p><a href="./../downloads/nx3_c_pyd/kmol_readme.txt">kmol_readme.txt</a></p>
-<p><a href="https://nova.disfarm.unimi.it/manual/plugins/tcc-doc.htm">Tiny C Compiler</a> <a href="https://lists.nongnu.org/archive/html/tinycc-devel/2009-06/msg00043.html">可以</a>建立 dll 動態連結程式庫. 這樣有機會利用它來建立 UGOpen API 嗎?</p>
-<p><a href="./../downloads/UGOpen_spur_gear.c">UGOpen_spur_gear.c</a></p>
-<p>NX10 之後已經支援 NXOpen Python, 因此接下來可利用 <a href="https://code.visualstudio.com/docs/cpp/config-mingw">Visual Studio Code</a> 作為 IDE, 用來開發 NX12 之後的 C/C++ 與 Python 整合應用的延伸程式.</p>
-<h4>Reference:</h4>
-<p style="padding-left: 30px;"><a href="https://iter01.com/614343.html">https://iter01.com/614343.html</a></p>
-<p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_ap">Get Started with NX Snap (2017).pdf</a></p>
-<p style="padding-left: 30px;"><a href="https://docs.sw.siemens.com/en-US/product/209349590/doc/PL20200522120320484.gs_snap/pdf/?audience=external">Get Started with NX Snap</a> (2021)</p>
-<p style="padding-left: 30px;"><a href="https://community.sw.siemens.com/s/topic/0TO4O000000MiiWWAS/nx-customization-and-programming">NX Custumization and Programming Discussions</a></p>
-<p></p><br />NXOpen << <a href='NXOpen.html'>Previous</a> <a href='NX2008.html'>Next</a> >> NX2008</div>
+    <div id="tipue_search_content">NX2008 << <a href='NX2008.html'>Previous</a> <a href='Onshape.html'>Next</a> >> Onshape<br /><h1>Research</h1>
+<p><a href="https://ieeexplore.ieee.org/document/8076193">Implementation of recognition algorithm with NXOpen API in siemens NX</a> (2017)</p>
+<p><a href="https://ieeexplore.ieee.org/document/8725312">The Method of Automatic Determination of the Types of Spatial Angles in 3D Models of CAD Systems</a> (2019)</p>
+<p>能不能利用 <a href="./../downloads/NXOpen_Getting_Started_2019.pdf">NXOpen_Getting_Started_2019.pdf</a> 中的程式庫,  自動從 <a href="./../downloads/cd2022_uarm_nx12_imported.7z">cd2022_uarm_nx12_imported.7z</a> 中的零件, 整理出對應的工程圖? 甚至根據這些零件的關鍵尺寸"自動建立對應的參數化零件檔案?</p>
+<h4>References:</h4>
+<p style="padding-left: 30px;"><a href="https://www.youtube.com/watch?v=l9Lq3D4AMAQ">https://www.youtube.com/watch?v=l9Lq3D4AMAQ</a> </p>
+<p style="padding-left: 30px;"><a href="http://www.nxjournaling.com/content/get-all-dimensions-formula-set-value">http://www.nxjournaling.com/content/get-all-dimensions-formula-set-value</a> </p>
+<p style="padding-left: 30px;"><a href="http://www.nxjournaling.com/content/expressions-query-existing-expressions">http://www.nxjournaling.com/content/expressions-query-existing-expressions</a> </p>
+<p style="padding-left: 30px;"><a href="https://nxopen1.rssing.com/chan-61486962/all_p16.html">https://nxopen1.rssing.com/chan-61486962/all_p16.html</a> </p>
+<p style="padding-left: 30px;"><a href="https://smartech.gatech.edu/bitstream/handle/1853/62626/RAMAMURTHY-DISSERTATION-2019.pdf">A REINFORCEMENT LEARNING FRAMEWORK FOR THE AUTOMATION OF ENGINEERING DECISIONS IN COMPLEX SYSTEMS</a></p>
+<p style="padding-left: 30px;"><a href="https://aaltodoc.aalto.fi/bitstream/handle/123456789/44315/master_Korhonen_Konsta_2020.pdf?sequence=1&amp;isAllowed=y">Design of an engineer-to-order product configuration with CAD integration</a></p>
+<p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/custom/en_US/nxopen_net/class_n_x_open_1_1_sketch.html#ad0e5c9fa4361cc5f63386b800a14dbf1">https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/custom/en_US/nxopen_net/class_n_x_open_1_1_sketch.html#ad0e5c9fa4361cc5f63386b800a14dbf1</a> </p>
+<p></p><br />NX2008 << <a href='NX2008.html'>Previous</a> <a href='Onshape.html'>Next</a> >> Onshape</div>
         
     <!-- footer -->
       <div class="container">
