加入 NXOpen Python 參考資料與範例

--- a/content/Research.html
+++ b/content/Research.html
@@ -140,6 +140,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">NX2008 << <a href='NX2008.html'>Previous</a> <a href='Onshape.html'>Next</a> >> Onshape<br /><h1>Research</h1>
+<p>NX12, NX1980 與 NX2008 的動態連結程式庫位於 NXBIN\python 目錄中.</p>
 <p><a href="https://ieeexplore.ieee.org/document/8076193">Implementation of recognition algorithm with NXOpen API in siemens NX</a> (2017)</p>
 <p><a href="https://ieeexplore.ieee.org/document/8725312">The Method of Automatic Determination of the Types of Spatial Angles in 3D Models of CAD Systems</a> (2019)</p>
 <p>能不能利用 <a href="./../downloads/NXOpen_Getting_Started_2019.pdf">NXOpen_Getting_Started_2019.pdf</a> 中的程式庫,  自動從 <a href="./../downloads/cd2022_uarm_nx12_imported.7z">cd2022_uarm_nx12_imported.7z</a> 中的零件, 整理出對應的工程圖? 甚至根據這些零件的關鍵尺寸"自動建立對應的參數化零件檔案?</p>
