--- a/config/content.htm
+++ b/config/content.htm
@@ -798,6 +798,7 @@ var winkVideoData = {
 <p>至於要解開 SiemensNX-2008_wntx64\nx\VC_redist.x64.exe 中的檔案, 可先利用 <a href="https://github.com/wixtoolset/wix3/releases/tag/wix3112rtm">https://github.com/wixtoolset/wix3/releases/tag/wix3112rtm</a> 中的 wix311-binaries.zip, 以 wix311-binaries\dark.exe vc_redist.x64.exe -x x64-extracted, 在 x64-extracted 目錄中取得 x64-extracted\AttachedContainer\packages\vcRuntimeMinimum_amd64\vc_runtimeMinimum_x64.msi 之後, 再利用 UniExtract2 解開所需的 dll 檔案後, 再放入 NXBIN 目錄.</p>
 <p>NX2008 啟動方式同 NX1980.</p>
 <h2>Research</h2>
+<p>NX12, NX1980 與 NX2008 的動態連結程式庫位於 NXBIN\python 目錄中.</p>
 <p><a href="https://ieeexplore.ieee.org/document/8076193">Implementation of recognition algorithm with NXOpen API in siemens NX</a> (2017)</p>
 <p><a href="https://ieeexplore.ieee.org/document/8725312">The Method of Automatic Determination of the Types of Spatial Angles in 3D Models of CAD Systems</a> (2019)</p>
 <p>能不能利用 <a href="/downloads/NXOpen_Getting_Started_2019.pdf">NXOpen_Getting_Started_2019.pdf</a> 中的程式庫,  自動從 <a href="/downloads/cd2022_uarm_nx12_imported.7z">cd2022_uarm_nx12_imported.7z</a> 中的零件, 整理出對應的工程圖? 甚至根據這些零件的關鍵尺寸"自動建立對應的參數化零件檔案?</p>
