--- a/content/Research.html
+++ b/content/Research.html
@@ -196,6 +196,16 @@ for dim in workPart.Dimensions:</pre>
 <p style="padding-left: 30px;"><a href="https://smartech.gatech.edu/bitstream/handle/1853/62626/RAMAMURTHY-DISSERTATION-2019.pdf">A REINFORCEMENT LEARNING FRAMEWORK FOR THE AUTOMATION OF ENGINEERING DECISIONS IN COMPLEX SYSTEMS</a></p>
 <p style="padding-left: 30px;"><a href="https://aaltodoc.aalto.fi/bitstream/handle/123456789/44315/master_Korhonen_Konsta_2020.pdf?sequence=1&amp;isAllowed=y">Design of an engineer-to-order product configuration with CAD integration</a></p>
 <p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/custom/en_US/nxopen_net/class_n_x_open_1_1_sketch.html#ad0e5c9fa4361cc5f63386b800a14dbf1">https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/custom/en_US/nxopen_net/class_n_x_open_1_1_sketch.html#ad0e5c9fa4361cc5f63386b800a14dbf1</a></p>
+<p style="padding-left: 30px;"><a href="https://www.nxjournaling.com/content/how-i-stopped-worrying-and-learned-love-help-file">https://www.nxjournaling.com/content/how-i-stopped-worrying-and-learned-love-help-file</a> </p>
+<p style="padding-left: 30px;"><a href="https://www.sciencedirect.com/science/article/pii/S2351978920319995">Object-oriented approach to product design using extended NX Open API</a></p>
+<p style="padding-left: 30px;"><a href="https://www.tandfonline.com/doi/full/10.1080/23311916.2019.1665396?scroll=top&amp;needAccess=true">Multi-objective spur gear design using teaching learning-based optimization and decision-making techniques</a></p>
+<p style="padding-left: 30px;"><a href="https://github.com/marmakoide/gear-profile-generator">https://github.com/marmakoide/gear-profile-generator</a> </p>
+<p style="padding-left: 30px;"><a href="https://github.com/ZiniuLu/SmartConverter">https://github.com/ZiniuLu/SmartConverter</a> </p>
+<p style="padding-left: 30px;"><a href="https://github.com/chiamingyen/mdeCourse">https://github.com/chiamingyen/mdeCourse</a> </p>
+<p style="padding-left: 30px;"><a href="https://community.sw.siemens.com/s/question/0D54O000061xBkLSAU/spur-gear-creation">NXOpen Spur Gear Creation</a></p>
+<p style="padding-left: 60px;"><a href="https://www.grobinc.com/spur-gears/">https://www.grobinc.com/spur-gears/</a> </p>
+<p style="padding-left: 60px;"><a href="https://ieeexplore.ieee.org/document/6052107">The Discussion of Spur Gear Library System Based on UG/Open</a></p>
+<p style="padding-left: 60px;">The dlx file must be placed in one of the following locations:<br/><br/>1. From where NX session is launched<br/><br/>2. $UGII_USER_DIR/application<br/><br/>3. For released applications, using UGII_CUSTOM_DIRECTORY_FILE is highly<br/><br/>recommended. This variable is set to a full directory path to a file</p>
 <p></p><br />NX2008 << <a href='NX2008.html'>Previous</a> <a href='Onshape.html'>Next</a> >> Onshape</div>
         
     <!-- footer -->
