--- a/content/Spur Gear.html
+++ b/content/Spur Gear.html
@@ -153,7 +153,10 @@ REM link with libufun.lib and libugopenint.lib
 gcc.exe -shared -o dist/gear.dll build/gear.o C:\nx12_portable\data\nx12\UGOPEN\libufun.lib C:\nx12_portable\data\nx12\UGOPEN\libugopenint.lib </pre>
 <p>取得 gear.dll 後, 可開啟 new Model file 後, 以 File -&gt; Execute -&gt; NX Open 執行 gear.dll.</p>
 <p>UGOpen C 程式架構請參考 <a href="./../downloads/nxopen/UG_Open-API_Programming.pdf">UG_Open-API_Programming.pdf</a></p>
-<p>UGOpen 技術文件請參考: <a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/11/nx_api/custom/en_US/ugopen_doc/index.html">UG Open Doc</a></p>
+<p>UGOpen 技術文件請參考:</p>
+<p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/11/nx_api/custom/en_US/ugopen_doc/index.html">UG Open Doc</a></p>
+<p style="padding-left: 30px;"><a href="http://wcm.cycu.org:88/nx3doc/apiprog/index.htm">Open C Programmer's Guide</a> (for internal use only)</p>
+<p style="padding-left: 30px;"><a href="http://wcm.cycu.org:88/nx3doc/ugopen_doc/main.html">Open C Reference Manual</a> (for internal use only)</p>
 <p>以下為 gear.c 編譯連結與執行過程:</p>
 <script>
 var winkVideoData_gear_design = {
