加入 NXOpen Python API 範例

--- a/content/NX12.html
+++ b/content/NX12.html
@@ -142,9 +142,31 @@ img.add_border {
     <div id="tipue_search_content">NX3 << <a href='NX3.html'>Previous</a> <a href='NX1980.html'>Next</a> >> NX1980<br /><h1>NX12</h1>
 <p>NX12 於 2017.10 釋出, 完整安裝容量約 18 GB.</p>
 <p>NX 自 NX10 之後支援 NXOpen Python API:</p>
+<p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/common/en_US/graphics/fileLibrary/nx/nxopen/nxopen_getting_started_v12.pdf">https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/common/en_US/graphics/fileLibrary/nx/nxopen/nxopen_getting_started_v12.pdf</a></p>
 <p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/10/nx_api/en_US/custom/nxopen_python_ref">https://docs.plm.automation.siemens.com/data_services/resources/nx/10/nx_api/en_US/custom/nxopen_python_ref</a></p>
 <p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/custom/en_US/nxopen_python_ref">https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/custom/en_US/nxopen_python_ref</a></p>
 <p style="padding-left: 30px;">利用 <a href="https://github.com/cjrh/easycython">https://github.com/cjrh/easycython</a> 將 .pyx 轉為 .pyd 後, 由 .py 導入後執行, 可<a href="https://medium.datadriveninvestor.com/using-easy-cython-to-speed-up-python-in-just-a-few-steps-fbda8d0cdeff">提升</a> Python 程式的執行速度. (<a href="https://www.laitimes.com/article/374w8_3nuce.html">參考</a>)</p>
+<p>以下內容取自 <a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/common/en_US/graphics/fileLibrary/nx/nxopen/nxopen_getting_started_v12.pdf">Getting started with NX Open for NX12</a>.</p>
+<p>NX Open is an Application Programming Interface (API) that lets you write programs to customize or extend NX.</p>
+<p>The benefit is that applications created this way can often speed up repetitive tasks, and capture important design process knowledge.</p>
+<p>There is a broad range of NX Open functions, which provide capabilities like:</p>
+<ol>
+<li>Creating part geometry, assemblies, drawings, and CAE and CAM objects</li>
+<li>Cycling through the objects in a part file, reading information or performing various operations on them</li>
+<li>Creating custom user interfaces that allow users to select objects and enter data</li>
+</ol>
+<p>Some typical applications of these functions are:</p>
+<ol>
+<li>Creating part geometry or drawings according to your local standards</li>
+<li>Importing data from other sources, outside of NX</li>
+<li>Reading data from objects in a part file, and writing it out in some form of report</li>
+<li>Building custom applications to make processes faster or easier to understand</li>
+</ol>
+<p>Of course, these are just a few examples of what is possible. You can probably think of many little repetitive processes that you would like to automate to speed up your work or standardize your output.</p>
+<p><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/custom/en_US/ugopen_doc/index.html">NXOpen C refrence guide</a></p>
+<p><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/custom/en_US/nxopen_python_ref/index.html">NXOpen Python reference guide</a></p>
+<p style="padding-left: 30px;"><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/custom/en_US/nxopen_python_ref/NXOpen.ListingWindow.html?highlight=listingwindow">ListingWindow</a></p>
+<p><a href="https://support.industrysoftware.automation.siemens.com/gtac.shtml">https://support.industrysoftware.automation.siemens.com/gtac.shtml</a></p>
 <h4>References:</h4>
 <p style="padding-left: 30px;"><a href="./../downloads/cd2022_uarm_nx12_imported.7z">cd2022_uarm_nx12_imported.7z</a></p>
 <p style="padding-left: 30px;"><a href="https://slideplayer.com/slide/11624773/">https://slideplayer.com/slide/11624773/</a></p>
