--- a/content/NX12_API.html
+++ b/content/NX12_API.html
@@ -2,7 +2,7 @@
         <head>
         <title>CD_Guide</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,9 +139,21 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Spur Gear << <a href='Spur Gear.html'>Previous</a> <a href='NX.html'>Next</a> >> NX<br /><h1>Solvespace</h1>
-<p>根據 <a href="https://mde.tw/cad2021/content/Compile%20Solvespace.html">https://mde.tw/cad2021/content/Compile%20Solvespace.html</a> 中的說明, 可以利用 <a href="https://drive.google.com/file/d/16L08jH3ZtoMeeGWBJrP9DuIk-cby_Wqw/view?usp=sharing">compile_copsim_for_cd2022.7z</a> (file size: 5 GB, extracted size: 17.3 GB), 完成編譯.</p>
-<p>自行編譯 Solvespace 的目的是希望透過 <a href="https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm">https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm</a> 與 <a href="https://www.coppeliarobotics.com/helpFiles/en/importExport.htm">https://www.coppeliarobotics.com/helpFiles/en/importExport.htm</a> 的資訊, 自行在 Solvespace 中將組立檔案直接轉入 Coppeliasim 的場景檔案. 其中牽涉如何將 Solvespace 組立件中的零件檔案進行分割後, 以 <a href="https://en.wikipedia.org/wiki/STL">STL</a>、<a href="http://wiki.ros.org/urdf">URDF</a> 或 <a href="http://sdformat.org/">SDF</a> 格式直接轉入 Coppeliasim.</p><br />Spur Gear << <a href='Spur Gear.html'>Previous</a> <a href='NX.html'>Next</a> >> NX</div>
+    <div id="tipue_search_content">NX12 << <a href='NX12.html'>Previous</a> <a href='NX1980.html'>Next</a> >> NX1980<br /><h1>NX12_API</h1>
+<p>假如希望套用 NX12 的 Python Journal 程式錄製, 首先需要將操作過程的程式錄製類別從內建的 VB 轉為 Python.</p>
+<p>Journal 錄製程式類別的設定, 位於 File -&gt; Preferences -&gt; User Interfaces -&gt; Tools -&gt; Journal -&gt; Python.</p>
+<p>選定採 Python 格式錄製操作過程 Journal 之後, 就可以利用上方下拉式功能表最右方的 Toolbar Options 將 Menu 功能表開啟, 然後透過 Menu -&gt; Tools -&gt; Journal -&gt; Record 選擇將 NX12 設計繪圖的操作過程以 NXOpen Python API 程式進行錄製, 完成後則可以透過 Menu -&gt; Tools -&gt; Journal -&gt; Play 執行.</p>
+<p>選擇 Record 之後, 跳出標題為 Journal Record 的視窗, 內容如下:</p>
+<p style="padding-left: 30px;">Some NX commands are not recorded. Therefore, replay many not produce the same results as the interactive NX session.</p>
+<p style="padding-left: 30px;">Replay of Journals recorded in VB, C# are supported only on Windows. Replay of journals recorded in Python are supported on both Windows and Linux.</p>
+<p style="padding-left: 30px;">To execute Journals recorded in other languages and/or on Linux, first create executable and then use the File-&gt; Execute -&gt; NXOpen command.</p>
+<p style="padding-left: 30px;">Refer to on-line Help documentation for further information.</p>
+<p>表示:</p>
+<ol>
+<li>NXOpen API 錄製程式可能無法將全部互動操作細節還原</li>
+<li>採 VB 及 C# 錄製的程式只能在 Windows 執行, 而 Python 格式的程式可以在 Windows 與 Linux 操作系統執行</li>
+<li>採 C/C++ 及 Java 錄製的程式, 經過編譯後, 可利用 File -&gt; Execute -&gt; NX Open 選單執行</li>
+</ol><br />NX12 << <a href='NX12.html'>Previous</a> <a href='NX1980.html'>Next</a> >> NX1980</div>
         
     <!-- footer -->
       <div class="container">
