--- a/content/Spur Gear.html
+++ b/content/Spur Gear.html
@@ -180,7 +180,8 @@ var winkVideoData_gear_design = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><br />uarm 主體零件 << <a href='uarm 主體零件.html'>Previous</a> <a href='Solvespace.html'>Next</a> >> Solvespace</div>
+</div>
+<p>除了使用上述 NX UGOpen C 的 gear.c 協助正齒輪的設計繪圖外, 也可以利用 NX12 版之後系統自帶的 \UGOPEN\SNAP\examples\More Examples\Gear\Gear.vb.</p><br />uarm 主體零件 << <a href='uarm 主體零件.html'>Previous</a> <a href='Solvespace.html'>Next</a> >> Solvespace</div>
         
     <!-- footer -->
       <div class="container">
